<resources>
    <string name="app_name">Mobile Coursework 2</string>

    <!--  IBM cloud credentials  -->
    <string name="version_date">2018-05-01</string>
    <string name="language_translator_apikey">HmLCLimeEArAMAgMh8_nQo0AmaGXbbUE59DSH8IHW9Zc</string>
    <string name="language_translator_url">https://api.us-east.language-translator.watson.cloud.ibm.com/instances/0fa78682-37a2-41b1-aa5e-23a22c16e93b</string>
    <string name="text_speech_apikey">MtEjZFhhQBYD15LX9qF9-xVKRAkmQztmZday7EEKixzK</string>
    <string name="text_speech_url">https://api.us-south.text-to-speech.watson.cloud.ibm.com/instances/5bc1a0c4-7919-4749-8be1-341c64108ac2</string>

    <!--  button texts  -->
    <string name="btn_add_phrases">Add Phrases</string>
    <string name="btn_display_phrases">Display Phrases</string>
    <string name="btn_edit_phrases">Edit Phrases</string>
    <string name="btn_lang_sub">Language Subscription</string>
    <string name="btn_translate">Translate</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_update">Update</string>

    <!--  labels  -->
    <string name="hint_input_phrase">New Phrase</string>
    <string name="hint_edit_phrase">Modified Phrase</string>
    <string name="hint_select_lang">Select Language</string>

    <!--  switch  -->
    <string name="translate_single_phrase">Translate Single Phrase</string>
    <string name="translate_all_phrases">Translate All Phrases</string>

    <!--  error messages  -->
    <string name="err_input_phrase">Please input phrase</string>
    <string name="err_invalid_phrase">Please input valid phrase</string>

    <string name="empty_list">Nothing to display</string>
</resources>
