<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/uiEditPhrases"
    tools:context=".ui.activity.ActEditPhrases">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lytBottomPanel"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <ListView
            android:id="@+id/listPhrases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/transparent"
            android:dividerHeight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/lytBottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEditPhrase"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditPhrase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_edit_phrase"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnEdit"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn_edit" />

            <TextView
                android:id="@+id/btnSave"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn_save" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>